--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<html>
-	<head>
-		<title>Hi,me</title>
-	</head>
-
-	<body>
-		<h1>This is a empty page</h1>
-	<body>
-
-
-
-</html>
+My GitHub Page
