--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@ My GitHub Page
 <h1>hello worl</h1>
 2014-10-21
 Today I finish my raspberry pi config
+2014-10-29
+my rpi has equited with 7 ich screen and some led light
